# AxiSEM3D

./: License.txt  README.md  axisem3d_depends.sh
SOLVER/: CMakeLists.txt
SOLVER/cmake/: FindEIGEN3.cmake  FindEXODUS.cmake  FindFFTW.cmake  FindMETIS.cmake  FindNETCDF.cmake
SOLVER/src/: axisem.cpp  axisem.h  eigen.h  ftz.c  global.h  main.cpp
SOLVER/src/3d_model/3d_geometric/: Geometric3D.cpp  Geometric3D.h
SOLVER/src/3d_model/3d_geometric/EMC/: Geometric3D_EMC.cpp  Geometric3D_EMC.h
SOLVER/src/3d_model/3d_geometric/crust1/: Geometric3D_crust1.cpp  Geometric3D_crust1.h
SOLVER/src/3d_model/3d_geometric/ellipticity/: Ellipticity.cpp  Ellipticity.h
SOLVER/src/3d_model/3d_geometric/internal/: Geometric3D_Internal.cpp  Geometric3D_Internal.h
SOLVER/src/3d_model/3d_oceanload/: OceanLoad3D.cpp  OceanLoad3D.h
SOLVER/src/3d_model/3d_oceanload/const/: OceanLoad3D_const.cpp  OceanLoad3D_const.h
SOLVER/src/3d_model/3d_oceanload/crust1/: OceanLoad3D_crust1.cpp  OceanLoad3D_crust1.h
SOLVER/src/3d_model/3d_volumetric/: Volumetric3D.cpp  Volumetric3D.h
SOLVER/src/3d_model/3d_volumetric/EMC/: Volumetric3D_EMC.cpp  Volumetric3D_EMC.h
SOLVER/src/3d_model/3d_volumetric/anisotropic/: Volumetric3D_MontagnerAnisotropic.cpp  Volumetric3D_MontagnerAnisotropic.h
SOLVER/src/3d_model/3d_volumetric/crust1/: Volumetric3D_crust1.cpp  Volumetric3D_crust1.cpp.backup  Volumetric3D_crust1.h
SOLVER/src/3d_model/3d_volumetric/s20_s40rts/: Volumetric3D_s20rts.cpp  Volumetric3D_s20rts.h  Volumetric3D_s40rts.cpp  Volumetric3D_s40rts.h  s20rts.f90  s40rts.f90  sX0rts_meta_data.f90
SOLVER/src/3d_model/3d_volumetric/simple_shapes/: Volumetric3D_bubble.cpp  Volumetric3D_bubble.h  Volumetric3D_cylinder.cpp  Volumetric3D_cylinder.h
SOLVER/src/core/: eigenc.h
SOLVER/src/core/domain/: Domain.cpp  Domain.h
SOLVER/src/core/element/: Element.cpp  Element.h  FluidElement.cpp  FluidElement.h  SolidElement.cpp  SolidElement.h
SOLVER/src/core/element/crd/: CrdTransTIsoFluid.cpp  CrdTransTIsoFluid.h  CrdTransTIsoSolid.cpp  CrdTransTIsoSolid.h
SOLVER/src/core/element/fft/: FieldFFT.cpp  FieldFFT.h
SOLVER/src/core/element/grad/: Gradient.cpp  Gradient.h  GradientAxial.cpp  GradientAxial.h  GradientAxialVoigt.cpp  GradientAxialVoigt.h  GradientVoigt.cpp  GradientVoigt.h
SOLVER/src/core/element/prt/: PRT.cpp  PRT.h  PRT_1D.cpp  PRT_1D.h  PRT_3D.cpp  PRT_3D.h
SOLVER/src/core/fftw/: SolverFFTW.cpp  SolverFFTW.h  SolverFFTW_1.cpp  SolverFFTW_1.h  SolverFFTW_3.cpp  SolverFFTW_3.h  SolverFFTW_N3.cpp  SolverFFTW_N3.h  SolverFFTW_N6.cpp  SolverFFTW_N6.h  SolverFFTW_N9.cpp  SolverFFTW_N9.h
SOLVER/src/core/material/acoustic/: Acoustic.h  Acoustic1D.cpp  Acoustic1D.h  Acoustic3X.cpp  Acoustic3X.h
SOLVER/src/core/material/attenuation/: Attenuation.h  eigen_cg4.h
SOLVER/src/core/material/elastic/: Elastic.h
SOLVER/src/core/newmark/: Newmark.cpp  Newmark.h
SOLVER/src/core/output/pointwise/: PointwiseIO.h  PointwiseIOASDF.cpp  PointwiseIOASDF.h  PointwiseIOAscii.cpp  PointwiseIOAscii.h  PointwiseIONetCDF.cpp  PointwiseIONetCDF.h  PointwiseRecorder.cpp  PointwiseRecorder.h  minimum_quake.xml  minimum_station.xml
SOLVER/src/core/output/surface/: SurfaceIO.cpp  SurfaceIO.h  SurfaceInfo.cpp  SurfaceInfo.h  SurfaceRecorder.cpp  SurfaceRecorder.h
SOLVER/src/core/point/: FluidPoint.cpp  FluidPoint.h  Point.cpp  Point.h  SolidFluidPoint.cpp  SolidFluidPoint.h  SolidPoint.cpp  SolidPoint.h
SOLVER/src/core/point/mass/: Mass.h  Mass1D.cpp  Mass1D.h  Mass3D.cpp  Mass3D.h  MassOcean1D.cpp  MassOcean1D.h  MassOcean3D.cpp  MassOcean3D.h
SOLVER/src/core/point/solid_fluid/: SFCoupling.h  SFCoupling1D.cpp  SFCoupling1D.h  SFCoupling3D.cpp  SFCoupling3D.h
SOLVER/src/core/receiver/: Station.h
SOLVER/src/core/receiver/recorder/: RecorderAscii.cpp  RecorderAscii.h
SOLVER/src/core/receiver/seismometer/: Seismometer.cpp  SeismometerRTZ.h
SOLVER/src/core/source/: SourceTerm.cpp  SourceTerm.h  SourceTimeFunction.cpp  SourceTimeFunction.h
SOLVER/src/preloop/: eigenp.h
SOLVER/src/preloop/exodus/: ExodusModel.cpp  ExodusModel.h  ExodusModel__old.h  ExodusModel_new.cpp  ExodusModel_new.h  H5Reader.cpp  H5Reader.h
SOLVER/src/preloop/graph/: Connectivity.cpp  Connectivity.h  DualGraph.cpp  DualGraph.h
SOLVER/src/preloop/mesh/: GLLPoint.cpp  GLLPoint.h  Mesh.cpp  Mesh.h  Quad.cpp  Quad.h  SlicePlot.cpp  SlicePlot.h
SOLVER/src/preloop/nrfield/: ConstNrField.cpp  ConstNrField.h  EmpNrField.cpp  EmpNrField.h  NrField.cpp  NrField.h  UserNrField.cpp  UserNrField.h
SOLVER/src/preloop/nrfield/enhance/: NrFieldEnhance.cpp  NrFieldEnhance.h  NrFieldEnhanceCircle.cpp  NrFieldEnhanceCircle.h
SOLVER/src/preloop/nrfield/wisdom/: NuWisdom.cpp  NuWisdom.h  WisdomNrField.cpp  WisdomNrField.h
SOLVER/src/preloop/physics/attenuation/: AttAxiSEM.cpp  AttAxiSEM.h  AttBuilder.cpp  AttBuilder.h  AttSimplex.cpp  AttSimplex.h  simplex.f90
SOLVER/src/preloop/physics/material/: Material.cpp  Material.h
SOLVER/src/preloop/physics/relabelling/: Relabelling.cpp  Relabelling.h
SOLVER/src/preloop/receiver/: Receiver.cpp  Receiver.h  ReceiverCollection.cpp  ReceiverCollection.h
SOLVER/src/preloop/source/: Earthquake.cpp  Earthquake.h  NullSource.h  PointForce.cpp  PointForce.h  Source.cpp  Source.h
SOLVER/src/preloop/source/offaxis/: OffAxisPointForce.cpp  OffAxisPointForce.h  OffAxisSource.cpp  OffAxisSource.h
SOLVER/src/preloop/source/stf/: ErfSTF.cpp  ErfSTF.h  FileSTF.cpp  GaussSTF.cpp  GaussSTF.h  RickerSTF.cpp  RickerSTF.h  STF.cpp  STF.h
SOLVER/src/preloop/spectral/: SpectralConstants.cpp  SpectralConstants.h
SOLVER/src/preloop/spectral/mapping/: LinearMapping.cpp  Mapping.cpp  SemiSphericalMapping.cpp  SphericalMapping.cpp
SOLVER/src/preloop/utilities/: Geodesy.cpp  Geodesy.h  MultilevelTimer.cpp  MultilevelTimer.h  Parameters.cpp  Parameters.h  PreloopFFTW.cpp  PreloopFFTW.h  PreloopGradient.cpp  XGeodesy.cpp  XGeodesy.h  XMPI.cpp  XMPI.h  XMath.cpp  XMath.h  XTimer.cpp  XTimer.h
SOLVER/src/preloop/utilities/netcdf/: NetCDF_Reader.cpp  NetCDF_Reader.h  NetCDF_ReaderAscii.cpp  NetCDF_ReaderAscii.h  (+3 more)
(+167 files in other folders)
